# neo-mcp-logic-analyze

./: .gitignore  LICENSE  README.md  README.pt-BR.md  pyproject.toml
src/mcp_logic_analyzer/: __init__.py  config.py  server.py
src/mcp_logic_analyzer/adapters/: sympy_adapter.py  z3_adapter.py
src/mcp_logic_analyzer/models/: ast.py  schemas.py
src/mcp_logic_analyzer/resources/: ambiguity_taxonomy.md  ast_schema_v1.json  examples_fol.json  examples_propositional.json
src/mcp_logic_analyzer/services/: ambiguity.py  consistency.py  entailment.py  explainer.py  formalizer.py  nl_normalizer.py
tests/: test_ambiguity.py  test_consistency.py  test_entailment.py  test_parse.py
